# twitch-tests

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests-auto.yml  run-tests-manual-trigger.yml
configuration/: .env  config.ini
pageObjects/: Streamer.py  Twitch.py
tests/: conftest.py  test_streamer_loaded.py
